# rayTracer

./: CMakeLists.txt  main.cpp
engine/: ray.cpp  ray.hpp  tracer.cpp  tracer.hpp
helper/: point.cpp  point.hpp  vector.cpp  vector.hpp
objects/: circle.cpp  circle.hpp  object.cpp  object.hpp  objecthandler.cpp  objecthandler.hpp
screen/: camera.cpp  camera.hpp  colour.cpp  colour.hpp  viewplane.cpp  viewplane.hpp  visualengine.cpp  visualengine.hpp
